:bug: Fix mobile spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -140,7 +140,6 @@ button {
 
 .newsletter {
   font-size: clamp(18px, 0.75em, 20px);
-  margin-top: 1.5em;
 }
 
 .newsletter__input {
